--- a/unit_6/css/stylesheet.css
+++ b/unit_6/css/stylesheet.css
@@ -1,5 +1,14 @@
 @import url(https://fonts.googleapis.com/css?family=Quattrocento);
 @import url(https://fonts.googleapis.com/css?family=Biryani);
+*,
+*:before,
+*:after {
+	margin:0;
+	padding: 0;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
 
 body {
 	font-family: 'Quattrocento', serif;
@@ -7,6 +16,7 @@ body {
 	line-height: 1.5;
 	color: #FCFFF5;
 	background-color: #3E606F;
+	box-sizing: border-box;
 }
 
 header {
@@ -59,8 +69,8 @@ section {
 
 main {
 	/*background-color: #FFC675;*/
-	/*border: 1px black solid;
-	padding: 20px;*/
+	border: 1px black solid;
+	padding: 20px;
 /*	letter-spacing: 1;*/
 	/*width: 30%;*/
 }
@@ -68,14 +78,26 @@ main {
 figure {
 	border: 1px black solid;
 	padding: 20px;
-	width: 400px;
+	width: 50%;
 	/*width: 40%;*/
-	display: inline-block;
+	display: block;
+	float: left;
+	/*height: 400px;*/
+	/*border-radius: 50%;
+	height: 0;
+	padding-bottom: 50%;
+	overflow: hidden;
+	position: relative;*/
 }
 
 figcaption {
 	color: #FCFFF5;
 	padding-bottom: 5px; 
+	/*position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;*/
 }
 
 footer {
@@ -119,7 +141,7 @@ footer a {
 
 
 figure img{
-	width: 400px;
+	width: 100%;
 }
 
 .gradetitle{
@@ -151,7 +173,7 @@ figure img{
 #right{
 	background-color: #E55B88;
 	border: 1px black solid;
-	padding: 20px;
+/*	padding: 20px;*/
 	float: right;
 	width: 62%;
 }
